# cain

./: MANIFEST.in  README.md  SPECIFICATIONS.md  comparison.py  pyproject.toml  requirements.txt  setup.py  test.cain  test.cainschema  test.json  test.py
.github/workflows/: codeql-analysis.yml  pylint.yml  pypi.yml  pytest.yml  vermin.yml
cain/: __info__.py  __init__.py  __main__.py  cain.py  errors.py  model.py
cain/types/: __init__.py  arrays.py  binary.py  booleans.py  characters.py  enums.py  nonetype.py  numbers.py  objects.py  optional.py  optionals.py  ranges.py  sets.py  strings.py  tuples.py  types.py  union.py  unions.py
playground/: comparison.py  object.py  test.cain  test.json  test.py
tests/: a.py  comparison.py  nested.py  redundancy.py  test.cain  test.json  test.py  test_binary.py  test_booleans.py  test_characters.py  test_main.py  test_model.py  test_nonetype.py  test_numbers.py  test_objects.py  test_optionals.py  test_ranges.py  test_sets.py  test_strings.py  test_tuples.py  test_unions.py
