[tool.poetry]
name = "cain"
version = "1.1"
description = "A small yet powerful data format ✨"
license = "MIT"
authors = ["Animenosekai <animenosekai.mail@gmail.com>"]
maintainers = ["Animenosekai <animenosekai.mail@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Animenosekai/cain"
documentation = "https://github.com/Animenosekai/cain/blob/main/README.md"
keywords = ["animenosekai", "cain", "data", "format"]
classifiers = [
    # Status
    "Development Status :: 4 - Beta",

    # Environment
    "Environment :: Console",

    # Audience
    "Intended Audience :: Developers",

    # Licensing
    "License :: OSI Approved :: MIT License",

    # Software Requirements
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",

    # Topics
    "Topic :: File Formats",
    "Topic :: System :: Archiving",

    # Code quality
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
typing_extensions = "^4.7"

[tool.poetry.scripts]
cain = 'cain.__main__:entry'

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/Animenosekai/cain/issues"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
